--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 	<header>
@@ -37,8 +38,17 @@
 		</section>
 	</main>
 	<div class="cajita-orange">
-		<p>Hola</p>
+		<!-- <p>Hola</p> -->
+		<a href="https://www.facebook.com/"><img src="simbolo-de-la-aplicacion-de-facebook.png" alt=""></a>
+		
 	</div>
-	<footer>Este es el pie de página</footer>
+	<footer class="pie">
+		<p>Todos los derechos reservados</p>
+		<div class="iconos">
+			<i class="fa fa-comments"></i>
+			<i class="fa fa-drivers-license-o"></i>
+			<i class="fa fa-rss"></i>
+		</div>
+	</footer>
 </body>
 </html>
