--- a/index.html
+++ b/index.html
@@ -21,13 +21,20 @@
 	<main>
 		<img src="images/vr-hero-desktop_25626109.jpg" style="margin-bottom: 2%;">
 		<section>
-		<h1>Heading 1</h1>
+		
 		<figure>
-			<img src="images/pexels-sami-abdullah-7359476.jpg">
-			<figcaption>Este es un bosque en las afuera de Tokio, Japón. Créditos: Pexels.</figcaption>
+			<div class ="imgen">
+				<h1>Heading 1</h1>
+			    <img src="images/pexels-sami-abdullah-7359476.jpg">
+		     	<figcaption>Este es un bosque en las afuera de Tokio, Japón. Créditos: Pexels.</figcaption>
+		
+			</div>
+			
+		<div class="parrafo">
+			<p>Star Wars: The Bad Batch is here, chronicling the adventures of the elite squad Clone Force 99 following the end of the Clone War. In Bad Batch Declassified, we’ll explore our favorite moments from each episode of the series, available only on Disney+. Armor up and join us for the ride.</p>
+		    <p>After their run-in with a bounty hunter on Pantora, the Bad Batch connect with Cid, an old ally of the Jedi who can help identify their attacker. But this being the underworld of the galaxy far, far away, she won’t do it for free. In exchange for the intel, the Bad Batch accept a job to rescue a captive from a slave trader; naturally, Cid forgot to mention some key details. “Rampage” has some fun surprises and ties to the larger saga, while still putting the team in a new situation — and letting Omega shine as a resourceful hero. Here are five highlights from the episode.</p>
 		</figure>
-		<p>Star Wars: The Bad Batch is here, chronicling the adventures of the elite squad Clone Force 99 following the end of the Clone War. In Bad Batch Declassified, we’ll explore our favorite moments from each episode of the series, available only on Disney+. Armor up and join us for the ride.</p>
-		<p>After their run-in with a bounty hunter on Pantora, the Bad Batch connect with Cid, an old ally of the Jedi who can help identify their attacker. But this being the underworld of the galaxy far, far away, she won’t do it for free. In exchange for the intel, the Bad Batch accept a job to rescue a captive from a slave trader; naturally, Cid forgot to mention some key details. “Rampage” has some fun surprises and ties to the larger saga, while still putting the team in a new situation — and letting Omega shine as a resourceful hero. Here are five highlights from the episode.</p>
+		</div>
 		</section>
 		<section>
 			<div class="modulo">
